--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,2 +1,29 @@
 server:
-  port: 8888
+  port: 8866
+
+spring:
+  data:
+    mongodb:
+      host: 47.100.105.136
+      port: 27017
+      database: post
+      password:
+  redis:
+    # 地址
+    host: 47.100.105.136
+    # 端口，默认为6379
+    port: 6379
+    # 密码
+    password:
+    # 连接超时时间
+    timeout: 10s
+    lettuce:
+      pool:
+        # 连接池中的最小空闲连接
+        min-idle: 0
+        # 连接池中的最大空闲连接
+        max-idle: 8
+        # 连接池的最大数据库连接数
+        max-active: 8
+        # #连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1ms
