--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	implementation 'org.apache.commons:commons-pool2:2.8.0'
 	implementation 'org.apache.shiro:shiro-spring:1.5.3'
 	implementation 'com.auth0:java-jwt:3.8.3'
+	implementation 'com.github.oshi:oshi-core:5.1.2'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
