--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,9 @@ dependencies {
 	implementation 'com.auth0:java-jwt:3.8.3'
 	implementation 'com.github.oshi:oshi-core:5.1.2'
 	implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+	implementation 'com.huaweicloud:esdk-obs-java:3.19.7'
 
-
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
