--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,21 @@
 server:
   port: 8866
-
+  ssl:
+    key-store: classpath:api.guiyunweb.com.pfx
+    key-store-password: ATK7RtRl
+    key-store-type: PKCS12
 spring:
   data:
     mongodb:
-      host: 47.100.105.136
+      host: 127.0.0.1
       port: 27017
       database: post
-      password: mengyuanyun
-      username: guiyun
+      password: Meng.8626823
+      username: guiyunweb
       authentication-database: admin
   redis:
     # 地址
-    host: 47.100.105.136
+    host: 127.0.0.1
     # 端口，默认为6379
     port: 6379
     # 密码
@@ -33,8 +36,4 @@ spring:
     multipart:
       max-file-size: -1
       max-request-size: -1
-obs:
-  huawei:
-    ak: TSTPOQYY2JCI9BBHLIPW
-    sk: lchouQgxP84l2GVPwkSppLsdurvLCflbpw2kulvd
-    end-point: https://obs.cn-east-3.myhuaweicloud.com
+
